--- a/package.json
+++ b/package.json
@@ -4,14 +4,33 @@
   "private": true,
   "homepage": "https://potatobruce.io",
   "dependencies": {
+    "@stylable/core": "^2.1.0",
+    "@stylable/webpack-plugin": "^2.1.1",
+    "@ts-tools/webpack-loader": "^0.8.12",
+    "bfj": "^6.1.1",
+    "case-sensitive-paths-webpack-plugin": "^2.2.0",
+    "chalk": "^2.4.2",
+    "dotenv": "^8.0.0",
+    "dotenv-expand": "^5.1.0",
+    "file-loader": "^4.0.0",
+    "fs-extra": "^8.0.1",
+    "html-webpack-plugin": "next",
+    "object-assign": "^4.1.1",
     "react": "^16.3.1",
+    "react-dev-utils": "^7.0.3",
     "react-dom": "^16.3.1",
-    "@stylable/react-scripts": "^2.1.1"
+    "terser-webpack-plugin": "^1.3.0",
+    "tslib": "^1.10.0",
+    "typescript": "~3.5.1",
+    "url-loader": "^2.0.0",
+    "webpack": "^4.33.0",
+    "webpack-dev-server": "^3.7.1",
+    "webpack-manifest-plugin": "^2.0.4",
+    "workbox-webpack-plugin": "^4.3.1"
   },
   "scripts": {
-    "start": "stylable-scripts start",
-    "build": "stylable-scripts build",
-    "eject": "stylable-scripts eject",
+    "start": "node scripts/start.js",
+    "build": "node scripts/build.js",
     "deploy": "ncp ./CNAME ./build/CNAME && gh-pages -d ./build"
   },
   "devDependencies": {
@@ -19,6 +38,7 @@
     "@types/react-dom": "16",
     "gh-pages": "^1.1.0",
     "ncp": "^2.0.0",
+    "postcss-focus-within": "^3.0.0",
     "typescript": "~3.2.2",
     "typescript-support": "^0.5.5"
   }
